# qr-to-curve

./: .gitignore  README.md  pyproject.toml
src/qrtocurve/: __init__.py  __main__.py
src/qrtocurve/cli/: interface.py  parser.py
src/qrtocurve/qrreader/: qrimage.py  reader.py
